--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">PETEK KOLEJİ</a>
         <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">RAPORLAR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger active" href="#contact">GİRİŞ</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">GİRİŞ</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profile.png" alt="">
+        <img class="img-fluid" src="img/podium.png" alt="">
         <div class="intro-text">
           <span class="name">SPOR DEĞERLENDİRMELERİ SİSTEMİ</span>
           
@@ -210,7 +210,9 @@
             <div class="footer-col col-md-4">
               <h3>"Freelancer" Teması Hk.</h3>
               <p>"Freelance" teması kamusal kullanıma açık, <a href="http://startbootstrap.com">Start Bootstrap</a> tarafından geliştirilmiş, açık kaynaklı bir "Bootstrap" temasıdır.</p>
-            </div>
+
+    <div>Icons made by <a href="https://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+</div>
           </div>
         </div>
       </div>
@@ -512,8 +514,4 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
-
-  
-
-
 </body></html>
