--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
   </head>
 
-  <body id="page-top">
+  <body id="page-top" class="" style="">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav" style="">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">PETEK KOLEJİ</a>
-        <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="">
           Menu
           <i class="fa fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="navbar-collapse collapse" id="navbarResponsive" style="">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Özet</a>
@@ -40,7 +40,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">RAPORLAR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">GİRİŞ</a>
+              <a class="nav-link js-scroll-trigger active" href="#contact">GİRİŞ</a>
             </li>
           </ul>
         </div>
@@ -62,7 +62,7 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
       <div class="container">
-        <h2 class="text-center">DEĞERLENDİRME ALANLARI</h2>
+        <h3 class="text-center">DEĞERLENDİRME ALANLARI</h3>
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
@@ -132,7 +132,7 @@
     <!-- About Section -->
     <section class="success" id="about">
       <div class="container">
-        <h2 class="text-center">ÖZET</h2>
+        <h3 class="text-center">ÖZET</h3>
         <hr class="">
         <div class="row">
           <div class="col-lg-4 ml-auto">
@@ -149,7 +149,7 @@
     <!-- Contact Section -->
     <section id="contact">
       <div class="container text-center">
-        <h2 class="text-center">Giriş Yap</h2>
+        <h3 class="text-center">Giriş Yap</h3>
 (ÖĞRETMENLER İÇİN)        <hr class="star-primary">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -189,11 +189,11 @@
         <div class="container">
           <div class="row">
             <div class="footer-col col-md-4">
-              <h3>Lokasyon</h3>
+              <h4>Lokasyon</h4>
               <p>Başak Mah. Yeşil Vadi Cad. Saray Sok. No: 1/A (Metrokent karşısı) Başakşehir – İSTANBUL</p>
             </div>
             <div class="footer-col col-md-4">
-              <h3>Künye</h3>
+              <h4>Künye</h4>
               <ul class="list-inline">
                 
                 
@@ -207,10 +207,15 @@
                     Çalışma Saatleri<br>
                     08:00 - 17:00
                 </span></p></div>
-            <div class="footer-col col-md-4">
-              <h3>"Freelancer" Teması Hk.</h3>
-              <p>"Freelance" teması kamusal kullanıma açık, <a href="http://startbootstrap.com">Start Bootstrap</a> tarafından geliştirilmiş, açık kaynaklı bir "Bootstrap" temasıdır.</p>
-
+            <div class="footer-col col-md-4" style="
+    font-size: 12px;
+">
+              <h4>Copyright</h4>
+              "Freelance" teması kamusal kullanıma açık, <a href="http://startbootstrap.com">Start Bootstrap</a> tarafından geliştirilmiş, açık kaynaklı bir "Bootstrap" temasıdır.
+<hr style="
+    margin-top: 0.3rem;
+    margin-bottom: 0.3rem;
+">
     <div>Icons made by <a href="https://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </div>
           </div>
@@ -235,7 +240,7 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" style="display: none;" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -279,7 +284,7 @@
         </div>
       </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" style="display: none;" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -323,7 +328,7 @@
         </div>
       </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" style="display: none;" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -367,7 +372,7 @@
         </div>
       </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" style="display: none;" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -514,4 +519,5 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
+
 </body></html>
