text too big for mobile

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <div class="container">
         <img class="img-fluid" src="img/podium.png" alt="">
         <div class="intro-text">
-          <span class="name">SPOR DEĞERLENDİRMELERİ SİSTEMİ</span>
+          <span class="name" style="
+    font-size: 1.5em;
+">SPOR DEĞERLENDİRMELERİ SİSTEMİ</span>
           
           
         </div>
