font size again

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img class="img-fluid" src="img/podium.png" alt="">
         <div class="intro-text">
           <span class="name" style="
-    font-size: 1.5em;
+    font-size: 8vmin;
 ">SPOR DEĞERLENDİRMELERİ SİSTEMİ</span>
           
           
